# sgfa_qmap-pd

./: .codecov.yml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  ADJUSTING_MAD_THRESHOLD.md  ARCHITECTURE.md  AUTOMATIC_K_SELECTION.md  BASELINE_MATCH_VERIFICATION.md  BRAIN_REMAPPING_WITH_VOXEL_FILTERING.md  CLEANUP_SUMMARY.md  CLINICAL_INTEGRATION_COMPLETE.md  CODEBASE_CHANGES_OCT22_TO_OCT27.md  COMMIT_CLEANUP.md  COMPLETE_DIAGNOSTIC_PLOTS_GUARANTEE.md  CONFIG_CHANGE_SMOKING_GUN.md  CONFIG_K2_NO_SPARSITY_SUMMARY.md  CONVERGENCE_DIAGNOSTIC_RUN.md  CONVERGENCE_FIXES_COMPLETE_SUMMARY.md  CONVERGENCE_FIXES_SUMMARY.md  CONVERGENCE_ISSUE_ANALYSIS.md  CONVERGENCE_TESTS_QUICKSTART.md  CONVERGENCE_TESTS_README.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DIAGNOSTIC_PLOTS_FIX.md  DIAGNOSTIC_USAGE_GUIDE.md  EXTRACTION_COMPLETE.md  EXTRACTION_PROGRESS.md  FACTOR_ANALYSIS_FUNDAMENTALS_AUDIT.md  FACTOR_VARIANCE_ANALYSIS.md  FIXES_OCT27_2025.md  FIX_NUM_SOURCES_MISMATCH.md  HANDOFF_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_VERIFICATION.md  LEGACY_REDUNDANCY_ANALYSIS.md  LOGGING_ENHANCED_TEST_GUIDE.md  LOG_LIKELIHOOD_REMOVAL_STATUS.md  MANIFEST.in  MCMC_PARAMETER_OVERRIDE_BUG_FIX.md  (+125 more)
.github/: CI-CD-DOCUMENTATION.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependencies.yml  release.yml  research-validation.yml
MATLAB scripts/: qmap_gfa_weight2mri.m  reconstruct_roi_images.m  reference_qmap_pulldata_2025_4madhavan.m
MATLAB_scripts/: qmap_gfa_weight2mri.m  reference_qmap_pulldata_2025_4madhavan.m
analysis/: __init__.py  analysis_integration.py  component_factory.py  config_manager.py  cross_validation.py  cross_validation_library.py  cv_fallbacks.py  cv_integration.py  data_manager.py  experiment_utils.py  factor_stability.py  mcmc_diagnostics.py  model_runner.py
analysis/clinical/: __init__.py  biomarker_analysis.py  classification.py  data_processing.py  external_validation.py  integration.py  metrics.py  progression_analysis.py  subtype_analysis.py
archived/: MIGRATION_README.md
archived/experiments/: performance_benchmarks.py
benchmarks/: README.md  __init__.py  benchmark_memory.py  benchmark_sgfa.py
core/: __init__.py  config_schema.py  config_utils.py  error_handling.py  experiment_utils.py  get_data.py  io_utils.py  logger_utils.py  model_interface.py  parameter_resolver.py  pca_initialization.py  results_cache.py  run_analysis.py  utils.py  validation_utils.py  visualization.py
data/: __init__.py  preprocessing.py  preprocessing_integration.py  qmap_pd.py  synthetic.py
debug_results/clinical_validation/: summary.json
debug_results/data_validation/: summary.json
debug_results/model_comparison/: summary.json
debug_results/performance_benchmarks/: summary.json
debug_results/performance_benchmarks_20250917_143551/: result.json
debug_results/performance_benchmarks_20250917_143810/: result.json
debug_results/performance_benchmarks_20250917_143853/: config.yaml
debug_results/remote_workstation_method_comparison_20250917_135820/: result.json
debug_results/remote_workstation_method_comparison_20250917_142849/: config.yaml
debug_results/reproducibility/: summary.json
debug_results/reproducibility_tests_20250928_132131/: config.yaml
debug_results/sgfa_parameter_comparison/: summary.json
diagnostics/baseline/: baseline_config.yaml  baseline_summary.json
docs/: .gitignore  ARCHITECTURE.md  BRAIN_REMAPPING_WITH_VOXEL_FILTERING.md  CONVERGENCE_TESTING_GUIDE.md  COVARIANCE_ANALYSIS.md  CV_ARCHITECTURE.md  ERROR_HANDLING.md  FIXES_AND_ENHANCEMENTS.md  FUTURE_WORK.md  MCMC_TRACE_PLOTS.md  Makefile  PCA_CONFIGURATION_GUIDE.md  PCA_INITIALIZATION_GUIDE.md  README.md  REFACTOR_PLAN.md  TESTING.md  UTILS_STRUCTURE.md  WITHIN_VIEW_STANDARDIZATION_VERIFICATION.md  conf.py  config_quick_reference.md  configuration.md  index.rst  spatial_remapping_guide.md  spatial_remapping_integration.md
docs/api/: analysis.rst  data.rst  experiments.rst  models.rst  modules.rst  performance.rst  utils.rst  (+1 more)
examples/: README.md  __init__.py  data_example.py  experiment_configuration.py  models_example.py  performance_example.py  quick_start.py  spatial_remapping_example.py  visualization_example.py
experiments/: __init__.py  clinical_validation.py  data_validation.py  framework.py  method_comparison.py  model_comparison.py  performance_benchmarks.py  reproducibility.py  robustness_testing.py  runner.py  sensitivity_analysis.py  sgfa_configuration_comparison.py  sgfa_hyperparameter_tuning.py  sgfa_parameter_comparison.py  spatial_remapping_integration.py  train_sparse_gfa_fixed.py
models/: __init__.py  base.py  factory.py  latent_class_analysis.py  models_integration.py  sparse_gfa.py  sparse_gfa_fixed.py  sparse_gfa_fixed.py.bak2  sparse_gfa_fixed.py.bak3  standard_gfa.py
optimization/: PROFILING_GUIDE.md  __init__.py  config.py  data_streaming.py  experiment_mixins.py  integration.py  mcmc_optimizer.py  memory_optimizer.py  performance_integration.py  profile_utils.py
performance/: __init__.py  config.py  data_streaming.py  integration.py  mcmc_optimizer.py  memory_optimizer.py  performance_integration.py  profiler.py
remote_workstation/: README.md  colab_experiments.ipynb  config.yaml  performance_integration.py  run_experiments.py  setup.sh  visualization_integration.py
remote_workstation_experiment_results/: experiment_summary.yaml
results/: flagged_subjects.csv  flagged_subjects_report.txt  mad_threshold_recommendations.txt  mad_threshold_summary_table.csv
scripts/: compare_convergence.py  extract_baseline_diagnostics.py
tests/: __init__.py  conftest.py  test_config_validation.py  test_optimization.py  test_run_analysis.py
tools/: __init__.py  analyze_clinical_features.py  check_imports.py  test_data_loading.py
visualization/: __init__.py  brain_plots.py  comparison_plots.py  core_plots.py  covariance_plots.py  cv_plots.py  diagnostic_plots.py  factor_plots.py  manager.py  neuroimaging_utils.py  preprocessing_plots.py  report_generator.py  subtype_plots.py
(+5900 files in other folders)
